--- a/.travis.yml
+++ b/.travis.yml
@@ -5,13 +5,13 @@
 language: python
 
 python:
-  #- 2.7
-  #- 3.4
-  #- 3.5
-  #- 3.6
-  #- pypy
-  #- pypy3
+  - 2.7
+  - 3.4
+  - 3.5
+  - 3.6
   - 3.7
+  - pypy
+  - pypy3
 
 env:
   # - PYPISERVER_REL=pypiserver
